# 1Project_DeepLearning

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
image_generation/: __init__.py  dataset.py  features.py  plots.py  preprocessing.py
image_generation/modeling/: predict.py  train.py
models/: 01_MIH_autoencoder.ipynb
notebooks/: 01_MIH_variational_autoencoder.ipynb  02_SLBG_variational_autoencoder.ipynb  03_MIH_variational_autoencoder.ipynb  3.1_MIH_variational_autoencoder.ipynb  3.2_SLBG_variational_autoencoder.ipynb  3.4_MIH_variational_autoencoder.ipynb
src/: dataset.py
src/preprocessor/: preprocessor.py
