[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "image_generation"
version = "0.0.1"
description = "Image generation from a t-shirt dataset using neural networks"
authors = [
  { name = "Sarah Beltran, David Gutierrez, Monica Ibarra" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["image_generation"]
include = ["pyproject.toml", "image_generation/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["image_generation"]
force-sort-within-sections = true

